node.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  annotations:
    name: node
  labels:
    app: node
  name: node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: node
        image: meuscontainers.azurecr.io/hebertsonm/node:_version_
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources: {}
      imagePullSecrets:
      - name: acr
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: node
spec:
  selector:
    app: node
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
