postgres.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: postgres
spec:
  template:
    metadata:
      labels:
        app: postgres
        tier: backend
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - mountPath: "/postgres"
          name: volume
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: azure-managed-disk
---

kind: Service
apiVersion: v1
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
