ruby.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  annotations:
    name: ruby
  labels:
    app: ruby
  name: ruby
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ruby
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ruby
    spec:
      containers:
      - name: ruby
        image: meuscontainers.azurecr.io/hebertsonm/ruby:_version_
        imagePullPolicy: Always
        ports:
        - containerPort: 4567
        resources: {}
      imagePullSecrets:
      - name: acr
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: ruby
spec:
  selector:
    app: ruby
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4567
