mini-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tutorial
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend: #unmatched requests come here
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: myminikube.info
    http:
      paths:
      - path: /js
        backend:
          serviceName: node
          servicePort: 8080
      - path: /rb
        backend:
          serviceName: ruby
          servicePort: 4567
